--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-codebuild": "1.76.0",
+    "@aws-cdk/aws-codepipeline": "1.76.0",
+    "@aws-cdk/aws-codepipeline-actions": "1.76.0",
+    "@aws-cdk/aws-lambda": "1.76.0",
     "@aws-cdk/core": "1.76.0",
     "source-map-support": "^0.5.16"
   }
